crates/library/src/snapshots/library__cache__tests__a_saved_track_keeps_its_duration_after_loading.snap
---
source: crates/library/src/cache.rs
expression: decoded
---
[
    Track {
        path: "/music/one.flac",
        duration: Some(
            259s,
        ),
        tags: Tags {
            title: Some(
                "Moon River",
            ),
            artist: None,
            album: None,
            album_artist: None,
            date: None,
            genre: None,
            track: None,
            track_total: None,
            disc: None,
            composer: None,
            comment: None,
            lyrics: None,
        },
        audio_format: AudioFormat {
            format: None,
            bitrate_kbps: None,
            sample_rate_hz: None,
            bits_per_sample: None,
            channels: None,
            replay_gain: None,
        },
        display: "Moon River",
        tagging: Read,
    },
]
