crates/library/src/snapshots/library__cache__tests__an_encoded_cache_decodes_to_the_same_entries.snap
---
source: crates/library/src/cache.rs
expression: decoded
---
[
    Track {
        source: Local(
            "/music/one.flac",
        ),
        tags: Tags {
            title: Some(
                "Moon River",
            ),
            artist: None,
            album: None,
            album_artist: None,
            date: None,
            genre: None,
            track: None,
            track_total: None,
            disc: None,
            composer: None,
            comment: None,
            lyrics: None,
        },
        audio_format: AudioFormat {
            format: None,
            bitrate_kbps: None,
            sample_rate_hz: None,
            bits_per_sample: None,
            channels: None,
            replay_gain: None,
        },
        display: "Moon River",
        tagging: Read(
            180s,
        ),
    },
    Track {
        source: Local(
            "/music/two.flac",
        ),
        tags: Tags {
            title: None,
            artist: None,
            album: None,
            album_artist: None,
            date: None,
            genre: None,
            track: None,
            track_total: None,
            disc: None,
            composer: None,
            comment: None,
            lyrics: None,
        },
        audio_format: AudioFormat {
            format: None,
            bitrate_kbps: None,
            sample_rate_hz: None,
            bits_per_sample: None,
            channels: None,
            replay_gain: None,
        },
        display: "two.flac",
        tagging: Read(
            180s,
        ),
    },
]
