crates/library/src/snapshots/library__cache__tests__encoded_bytes_are_stable.snap
---
source: crates/library/src/cache.rs
expression: encoded(&tracks)
---
[
    6,
    1,
    15,
    47,
    109,
    117,
    115,
    105,
    99,
    47,
    111,
    110,
    101,
    46,
    102,
    108,
    97,
    99,
    1,
    180,
    0,
    1,
    10,
    77,
    111,
    111,
    110,
    32,
    82,
    105,
    118,
    101,
    114,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
