crates/library/src/snapshots/library__cache__tests__save_then_load_round_trips_for_the_same_music_dir.snap
---
source: crates/library/src/cache.rs
expression: loaded
---
[
    Track {
        source: Local(
            "/music/one.flac",
        ),
        tags: Tags {
            title: Some(
                "Moon River",
            ),
            artist: None,
            album: None,
            album_artist: None,
            date: None,
            genre: None,
            track: None,
            track_total: None,
            disc: None,
            composer: None,
            comment: None,
            lyrics: None,
        },
        audio_format: AudioFormat {
            format: None,
            bitrate_kbps: None,
            sample_rate_hz: None,
            bits_per_sample: None,
            channels: None,
            replay_gain: None,
        },
        display: "Moon River",
        tagging: Read(
            180s,
        ),
    },
    Track {
        source: Local(
            "/music/two.flac",
        ),
        tags: Tags {
            title: Some(
                "Clair de Lune",
            ),
            artist: None,
            album: None,
            album_artist: None,
            date: None,
            genre: None,
            track: None,
            track_total: None,
            disc: None,
            composer: None,
            comment: None,
            lyrics: None,
        },
        audio_format: AudioFormat {
            format: None,
            bitrate_kbps: None,
            sample_rate_hz: None,
            bits_per_sample: None,
            channels: None,
            replay_gain: None,
        },
        display: "Clair de Lune",
        tagging: Read(
            180s,
        ),
    },
]
